compiler/tests/liva/errors/e0605_await_in_par.liva
// Error Test: E0605 — Await inside parallel loop
// EXPECT: E0605
fetch() => "data"

main() {
    let items = [1, 2, 3]
    for par item in items {
        let result = await fetch()
        print(result)
    }
}
